<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/inetadd"
            android:textIsSelectable="false"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/Allow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ip"
            android:checked="true"
            android:text="@string/allow"
            android:textSize="35dp" />

        <CheckBox
            android:id="@+id/checkbox_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Allow"
            android:checked="true"
            android:text="@string/button_download"
            android:textSize="35dp" />

        <CheckBox
            android:id="@+id/checkbox_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_download"
            android:checked="true"
            android:text="@string/button_upload"
            android:textSize="35dp" />

        <CheckBox
            android:id="@+id/checkbox_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_upload"
            android:text="@string/button_rename"
            android:textSize="35dp" />

        <CheckBox
            android:id="@+id/checkbox_deletion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_rename"
            android:checked="false"
            android:text="@string/button_delete"
            android:textSize="35dp" />

        <CheckBox
            android:id="@+id/checkbox_toasts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_deletion"
            android:checked="true"
            android:text="@string/button_toast"
            android:textSize="35dp" />

        <Button
            android:id="@+id/deauth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_toasts"
            android:onClick="deauth"
            android:text="@string/button_deauth"
            android:textSize="30dp"

            />


    </RelativeLayout>
</ScrollView>